Fix overlap issue on mobile

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -6,7 +6,7 @@
 		margin: 2rem
 
 	@media(max-width: 700px)
-		margin: 2rem 1rem
+		margin: 5rem 1rem 2rem 1rem
 
 .site-title
 	font-size: 4rem
